Fixed errors on Java 9 and warnings in CollectionConverterClass tests